package td1.refactor.api.general.burger;

public interface BurgerIngredients {
    double caloriesPer100g();

}
