package td1.refactor.api.general.burger;

public enum Menu {
    MEAT, FISH, CHEESE, CUSTOM;
}